Estilização dos componentes Register, Login e Navbar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,47 @@
-.defer {
-  margin-top: 300px;
+/* Navbar fixa no topo */
+.navbar {
+  display: flex;
+  margin-bottom: 30px;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #2f2f2f;
+  padding: 10px 20px;
+  position: relative;
+  width: 100;
+}
+
+/* Links da Navbar */
+.navbar-links {
+  display: flex;
+  gap: 20px;
+}
+
+.navbar-link {
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.navbar-link:hover {
+  color: #0173ed; /* Cor ao passar o mouse */
+}
+
+/* Botão Logout */
+.navbar-logout {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-logout-button {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.navbar-logout-button:hover {
+  color: #ff4747; /* Cor ao passar o mouse */
 }
