--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,25 +1,30 @@
-<h1>Register</h1>
+<div class="login-container">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" class="login-form">
+    <p class="heading">Registre-se</p>
+    <p class="paragraph">Crie sua conta</p>
+    
+    <!-- Exibindo a mensagem de erro -->
+    @if (errorMessage) {
+      <div class="error-message">{{ errorMessage }}</div>
+    }
 
-@if (errorMessage) {
-  <div>{{ errorMessage }}</div>
-}
-
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  
-  <div>
-    <input type="text" placeholder="Username" formControlName="username" />
-  </div>
-
-  <div>
-    <input type="text" placeholder="Email" formControlName="email" />
-  </div>
-
-  <div>
-    <input type="password" placeholder="Password" formControlName="password" />
-  </div>
-
-  <div>
-    <button type="submit">Sign Up</button>
-  </div>
-
-</form>
+    <!-- Formulário de registro -->
+    <div class="input-group">
+      <input type="text" placeholder="Usuário" formControlName="username" class="form-control" />
+    </div>
+    
+    <div class="input-group">
+      <input type="text" placeholder="Email" formControlName="email" class="form-control" />
+    </div>
+    
+    <div class="input-group">
+      <input type="password" placeholder="Senha" formControlName="password" class="form-control" />
+    </div>
+    
+    <button type="submit">Cadastrar</button>
+    
+    <div class="bottom-text">
+      <p>Você já tem uma conta? <a routerLink="/login">Login</a></p>
+    </div>
+  </form>
+</div>
