--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,31 @@
-<h1>Login</h1>
+<div class="login-container">
 
-@if (errorMessage) {
-  <div>{{ errorMessage }}</div>
-}
+  <form [formGroup]="form" (ngSubmit)="onSubmit()" class="login-form">
 
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div>
-    <input type="text" placeholder="Email" formControlName="email" />
-  </div>
-  <div>
-    <input type="password" placeholder="Password" formControlName="password" />
-  </div>
-  <div>
-    <button type="submit">Sign In</button>
-  </div>
-</form>
+    <p class="heading">Login</p>
+    <p class="paragraph">Autenticação Firebase</p>
+
+    <!-- Exibindo a mensagem de erro -->
+    @if (errorMessage) {
+    <div class="error-message">{{ errorMessage }}</div>
+    }
+
+    <!-- Formulário de login -->
+    <div class="input-group">
+      <input type="text" placeholder="Email" formControlName="email" id="email" class="form-control" />
+    </div>
+
+    <div class="input-group">
+      <input type="password" placeholder="Senha" formControlName="password" id="password" class="form-control" />
+    </div>
+    
+    <button type="submit">Entrar</button>
+
+    <div class="bottom-text">
+      <p>Você não tem uma conta? <a routerLink="/register">Registre-se</a></p>
+      <p><a href="#">Esqueceu a senha?</a></p>
+    </div>
+
+  </form>
+
+</div>
